[package]
name = "tea_strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["polars"]
polars = ["tevec/polars", "time"]
ndarray = ["tevec/ndarray"]
time = ["tevec/time"]
serde = ["tevec/serde"]

[dependencies]
itertools = "0.13"
derive_more = { version = "1", features = ["from"] }
serde = { version = "1.0", features = ["derive"] }
tevec = { version = "0.4", features = [
    "agg",
    "rolling",
    "map",
    "time",
], default-features = false }
